[최준영] sprint6 (#58)
* chore: Swagger(OpenAPI) 설정 및 API 문서화 환경 구성

* docs: Auth, User, BinaryContent 컨트롤러 Swagger 문서화

* docs: Channel, Message, ReadStatusController 컨트롤러 Swagger 문서화

* refactor: 기존 엔티티 및 DTO 필드 명 정리

* refactor: 정적 리소스 적용 및 기존 엔티티 및 DTO 일부 수정

* feat: 심화 요구 사항 충족을 위한 정적 리소스 추가

* refactor: 로그인 로직 개선 및 DTO 변환 책임 분리

* fix: 파일 다운로드 시 JSON 응답 오류 및 한글 파일명 깨짐 해결

* build: 배포 환경 JDK 버전 호환성 문제 해결 (Railway 배포 관련)

* build: 배포 관련 build.gradle 수정

* chore: 멘토님 리뷰 반영 - .discodeit 디렉토리 추적 제외 및 ignore 설정

* refactor: 필요없는 엔티티 필드 정리 및 Swagger 파일 분리

* feat: MapStruct 전역 설정(GlobalMapperConfig) 도입

* feat: 데이터베이스 환경 설정 및 초기 스키마(DDL) 추가

* feat: JPA Auditing을 위한 BaseEntity 및 BaseUpdatableEntity 추가

* refactor: 도메인 모델의 객체 참조 관계 재설계 (JPA 어노테이션 제외)

* feat: 도메인 엔티티 JPA 매핑 및 DB 제약 조건 구현

* refactor: DB에 이미 설정되어 있는 정보들 JPA에 중복 설정 -> 중복 설정 제거

* feat: 기존의 Repository -> JPARepository 정의 및 쿼리메서드 대체

* refactor: MapStruct 적용 및 조회 로직 최적화

* refactor: DTO 필요없는 import 제거

* feat: 기존 오류 내역 수정 및 서비스 레이어 JPA 적용

* feat: BinaryContent 저장 로직 고도화 및 페이징 처리 틀 마련

* feat: 페이지네이션 기능 구현 완료 및 전체 점검

* docs: README 파일 수정

* refactor: N+1 문제 및 channel_type 문제 수정

* refactor: status 문제 해결

* refactor: MessageRepository 수정